# wave-equation-simulations

./: README.md  multiplerandompinn.py  multiplerandomtrain.py
cpp/: .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  main  main.cpp
cpp_neuralnetwork/: CMakeLists.txt  main.cpp
cpp_neuralnetwork/include/: network.h
